# sellapp

./: .gitignore  README.md  main.py  pyproject.toml  re.bat  requirements.txt
sellapp/: sellapp.py
src/sellapp/: __init__.py  sellapp.py
src/sellapp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
