[build-system]
requires = [
    "setuptools>=61.0.0", 
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "sellapp"
version = "1.0.1"
description = "Python SDK for sell.app"
readme = "README.md"
keywords = ["feed", "reader", "tutorial"]
dependencies = [
    "httpx",
]
requires-python = ">=3.7"


[project.urls]
Homepage = "https://github.com/qoft/sellapp.py"
