[build-system]
requires = [
    "setuptools>=61.0.0", 
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "sellapp"
version = "1.0.5"
description = "Python SDK for sell.app"
readme = "README.md"
keywords = ["sell.app", "sellapp"]
dependencies = [
    "httpx",
]
requires-python = ">=3.7"


[project.urls]
Homepage = "https://github.com/qoft/sellapp.py"
